@@ -5,27 +5,27 @@
 plugin.tx_adgooglemaps {
 	settings {
 
-		plugin {
+		mapBuilder {
 
-			# cat=ad: Google Maps/enable/100; type=string; label=LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_constants.xml:settings.plugin.apiUrl
+			# cat=ad: Google Maps/enable/100; type=string; label=LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_constants.xml:settings.mapBuilder.apiUrl
 			apiUrl = http://maps.google.com/maps/api/js?sensor=false
 
-			# cat=ad: Google Maps/enable/110; type=string; label=LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_constants.xml:settings.plugin.geocodeUrl
+			# cat=ad: Google Maps/enable/110; type=string; label=LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_constants.xml:settings.mapBuilder.geocodeUrl
 			geocodeUrl = http://maps.google.com/maps/api/geocode/json
 
-			# cat=ad: Google Maps/enable/120; type=string; label=LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_constants.xml:settings.plugin.canvas
+			# cat=ad: Google Maps/enable/120; type=string; label=LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_constants.xml:settings.mapBuilder.canvas
 			canvas = tx_adgooglemaps_canvas_uid###UID###
 
-			# cat=ad: Google Maps/enable/130; type=string; label=LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_constants.xml:settings.plugin.height
+			# cat=ad: Google Maps/enable/130; type=string; label=LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_constants.xml:settings.mapBuilder.height
 			height = 400
 
-			# cat=ad: Google Maps/enable/140; type=string; label=LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_constants.xml:settings.plugin.pluginFile
-			pluginFile = EXT:ad_google_maps/Resources/Public/JavaScript/Plugin/Tx_AdGoogleMaps_Plugin.js
+			# cat=ad: Google Maps/enable/140; type=string; label=LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_constants.xml:settings.mapBuilder.mapBuilderFile
+			mapBuilderFile = EXT:ad_google_maps/Resources/Public/JavaScript/MapBuilder/Tx_AdGoogleMaps_MapBuilder.js
 
-			# cat=ad: Google Maps/enable/150; type=string; label=LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_constants.xml:settings.plugin.markerClusterUrl
+			# cat=ad: Google Maps/enable/150; type=string; label=LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_constants.xml:settings.mapBuilder.markerClusterUrl
 			markerClusterUrl = http://google-maps-utility-library-v3.googlecode.com/svn/tags/markerclusterer/1.0/src/markerclusterer_compiled.js
 
-			# cat=ad: Google Maps/enable/160; type=boolean; label=LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_constants.xml:settings.plugin.disableInsertDataAtHeaders
+			# cat=ad: Google Maps/enable/160; type=boolean; label=LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_constants.xml:settings.mapBuilder.disableInsertDataAtHeaders
 			disableInsertDataAtHeaders = 0
 		}
 
